Hacky fix for #16, When there’s a comment icon, the 2 icons overflow over the content. Add a spacer to push the content out of the way.

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -32,3 +32,7 @@
 .site-footer {
 	@extend %clearfix;
 }
+
+.mobile-space {
+	display:none;
+}
