--- a/src/sass/_responsive.scss
+++ b/src/sass/_responsive.scss
@@ -110,6 +110,11 @@
 	.entry-meta .genericon {
 		right: -45px;
 	}
+	.entry-summary .mobile-space {
+		float: right;
+		display: inline;
+		padding: 10px;
+	}
 
 	.comment-content,
 	.comment-respond {
